syntax = "proto3";

package net.proto;

option java_multiple_files = true;
option java_package = "dev.proto";

message ReviewProto {
  string reviewId = 1;
  string email = 2;
  string productId = 3;
  string reviewText = 4;
  int32 rating = 5;
}

